condensed marketplace components to MarketplaceSetItems, and rendered this group of components behind market/:setid route. The initial /market route now renders marketplaceSets, which shows each set and their topTenAverage cards, as well as percent change. Next time working on the app, be sure to start in App.js, where the topTenAverage variables need to be formatted correctly. Null prices are screwing up the sort method in MarketplaceSets. Null prices need to be handled accordingly

--- a/packages/client/src/features/marketplace/assets/marketplace.less
+++ b/packages/client/src/features/marketplace/assets/marketplace.less
@@ -196,6 +196,16 @@
     }
 }
 
+.marketDataSet {
+    display: flex;
+    height: 100px;
+    background-color: #6065cb41;
+    .valueAndChange {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 // _________________________________________________
 // _________________________________________________
 // _________________________________________________
